@@ -6,8 +6,11 @@ core = 7.x
 dependencies[] = entity
 
 files[] = includes/Entity/Workflow.php
+files[] = includes/Entity/WorkflowController.php
 files[] = includes/Entity/WorkflowState.php
+files[] = includes/Entity/WorkflowStateController.php
 files[] = includes/Entity/WorkflowConfigTransition.php
+files[] = includes/Entity/WorkflowConfigTransitionController.php
 files[] = includes/Entity/WorkflowScheduledTransition.php
 files[] = includes/Entity/WorkflowTransition.php
 files[] = includes/Entity/WorkflowTransitionController.php
